# public/swagger.yml
@@ -233,3 +233,150 @@ paths:
           description: Successful response
           content:
             application/json: {}
+  /master/pelanggan:
+    get:
+      tags:
+        - Master Data
+      summary: List of Customer
+      parameters:
+        - in: query
+          name: search
+          schema:
+            type: string
+          description: Pencarian terhadap data
+        - in: query
+          name: page
+          schema:
+            type: integer
+          description: Urutan halaman yang ingin ditampilkan
+        - in: query
+          name: per-page
+          schema:
+            type: integer
+          description: Jumlah item per halaman
+        - in: query
+          name: sort
+          schema:
+            type: string
+          description: Urutan dari sorting data (asc/desc)
+        - name: Accept
+          in: header
+          schema:
+            type: string
+          example: application/json
+      security:
+        - bearerAuth: []
+      responses:
+        "200":
+          description: Successful response
+          content:
+            application/json: {}
+    post:
+      tags:
+        - Master Data
+      summary: Create Category
+      requestBody:
+        content:
+          multipart/form-data:
+            schema:
+              type: object
+              example:
+                code: PLG000001
+                name: Pelanggan 1
+                phone: 081723614785
+                address: Jl. Santai aja dah
+                dob: "2002-10-12"
+      security:
+        - bearerAuth: []
+      parameters:
+        - name: Accept
+          in: header
+          schema:
+            type: string
+          example: application/json
+      responses:
+        "200":
+          description: Successful response
+          content:
+            application/json: {}
+  /master/pelanggan/{id}:
+    get:
+      tags:
+        - Master Data
+      summary: Select Specific data
+      security:
+        - bearerAuth: []
+      parameters:
+        - in: path
+          name: id
+          schema:
+            type: integer
+          required: true
+          description: Numeric ID of the data to get
+        - name: Accept
+          in: header
+          schema:
+            type: string
+          example: application/json
+      responses:
+        "200":
+          description: Successful response
+          content:
+            application/json: {}
+    put:
+      tags:
+        - Master Data
+      summary: Update Customer
+      requestBody:
+        content:
+          application/json:
+            schema:
+              type: object
+              example:
+                code: PLG000001
+                name: Pelanggan 1
+                phone: 081723614785
+                address: Jl. Santai aja dah
+                dob: "2002-10-12"
+      security:
+        - bearerAuth: []
+      parameters:
+        - in: path
+          name: id
+          schema:
+            type: integer
+          required: true
+          description: Numeric ID of the data to get
+        - name: Accept
+          in: header
+          schema:
+            type: string
+          example: application/json
+      responses:
+        "200":
+          description: Successful response
+          content:
+            application/json: {}
+    delete:
+      tags:
+        - Master Data
+      summary: Delete Category
+      security:
+        - bearerAuth: []
+      parameters:
+        - in: path
+          name: id
+          schema:
+            type: integer
+          required: true
+          description: Numeric ID of the data to get
+        - name: Accept
+          in: header
+          schema:
+            type: string
+          example: application/json
+      responses:
+        "200":
+          description: Successful response
+          content:
+            application/json: {}
